# StitchCUDA

./: .gitignore  README.md  pyproject.toml
prompts/: coder_initial.md  coder_revise.md  planner.md  replanner.md
stitchcuda/: __init__.py  cli.py  coder.py  events.py  kernelbench.py  llm.py  planner.py  templates.py  types.py  verifier.py  workflow.py
stitchcuda/tui/: __init__.py  app.py  console.py  display.py  doctor.py  invocation.py  profile.py  profile_cmd.py  prompts_cmd.py  run_cmd.py  runs_cmd.py  sinks.py  wizard.py
