[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stitchcuda"
version = "0.1.0"
description = "Fixed planner-coder-verifier workflow for KernelBench CUDA optimization."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
stitchcuda = "stitchcuda.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stitchcuda*"]
